--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,10 @@
         {
             "name": "Graze Developers",
             "email": "developers@graze.com"
+        },
+        {
+            "name": "Samuel Parkinson",
+            "email": "sam.james.parkisnon@gmail.com"
         }
     ],
 
