Correct my email address.

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         },
         {
             "name": "Samuel Parkinson",
-            "email": "sam.james.parkisnon@gmail.com"
+            "email": "sam.james.parkinson@gmail.com"
         }
     ],
 
