--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,30 @@
 language: php
 
-sudo: false
+dist: trusty
+
+cache:
+  directories:
+    - $HOME/.composer/cache/files
 
 php:
   - 5.6
   - 7.0
+  - 7.1
+  - nightly
   - hhvm
 
+env:
+  - 'COMPOSER_FLAGS="--prefer-stable --prefer-lowest"'
+  - 'COMPOSER_FLAGS=""'
+
 matrix:
-  include:
-    - php: 5.6
-      env: 'COMPOSER_FLAGS="--prefer-stable --prefer-lowest"'
+  allow_failures:
+    - php: hhvm
+    - php: nightly
+  fast_finish: true
 
 install:
-  - travis_retry composer update ${COMPOSER_FLAGS} --no-interaction --prefer-source
+  - travis_retry composer update ${COMPOSER_FLAGS} --no-interaction --prefer-dist
 
 script:
-  - composer test --quiet
+  - vendor/bin/phpunit tests/
