--- a/.travis.yml
+++ b/.travis.yml
@@ -27,4 +27,8 @@ install:
   - travis_retry composer update ${COMPOSER_FLAGS} --no-interaction --prefer-dist
 
 script:
+  - vendor/bin/phpcs -p --warning-severity=0 src/ tests/
   - vendor/bin/phpunit tests/
+
+after_script:
+  - test -f ./tests/report/coverage.clover && (wget https://scrutinizer-ci.com/ocular.phar; php ocular.phar code-coverage:upload --format=php-clover ./tests/report/coverage.clover)
