--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,9 @@
     "require-dev": {
         "mockery/mockery": "^0.9.4",
         "phpunit/phpunit": "^5.1.1",
-        "roave/security-advisories": "dev-master"
+        "roave/security-advisories": "dev-master",
+        "graze/standards": "^2.0",
+        "squizlabs/php_codesniffer": "^3.1"
     },
 
     "scripts": {
