add whitelist for coverage

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -7,4 +7,11 @@
         <listener class="Mockery\Adapter\Phpunit\TestListener"/>
     </listeners>
 
+    <!-- whitelist -->
+    <filter>
+        <whitelist>
+            <directory suffix=".php">src/</directory>
+        </whitelist>
+    </filter>
+
 </phpunit>
