--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
     },
 
     "require": {
-        "silex/silex": "^1.2"
+        "silex/silex": "^2"
     },
 
     "require-dev": {
@@ -37,7 +37,8 @@
         "phpunit/phpunit": "^5.1.1",
         "roave/security-advisories": "dev-master",
         "graze/standards": "^2.0",
-        "squizlabs/php_codesniffer": "^3.1"
+        "squizlabs/php_codesniffer": "^3.1",
+        "symfony/debug": "^2.8|^3"
     },
 
     "scripts": {
